--- a/package.json
+++ b/package.json
@@ -15,5 +15,26 @@
   "bugs": {
     "url": "https://github.com/majofeechiou/try/issues"
   },
-  "homepage": "https://github.com/majofeechiou/try#readme"
+  "homepage": "https://github.com/majofeechiou/try#readme",
+  "devDependencies": {
+    "autoprefixer": "^6.3.6",
+    "babel-cli": "^6.10.1",
+    "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.9.1",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "postcss": "^5.0.21",
+    "postcss-calc": "^5.2.1",
+    "postcss-color": "^1.0.1",
+    "postcss-fontpath": "^0.3.0",
+    "postcss-loader": "^0.9.1",
+    "precss": "^1.4.0",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
+  }
 }
