--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
+    "d3": "^3.5.17",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "jquery": "^3.0.0",
     "postcss": "^5.0.21",
     "postcss-calc": "^5.2.1",
     "postcss-color": "^1.0.1",
@@ -37,8 +39,10 @@
     "postcss-loader": "^0.9.1",
     "precss": "^1.4.0",
     "style-loader": "^0.13.1",
+    "togeojson": "^0.13.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
-  }
+  },
+  "dependencies": {}
 }
